--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
 
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/currency-line.css">
-  <link rel="stylesheet" href="./css/currency.css">
-  <link rel="stylesheet" href="./css/form.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
   <title>Cryptocurrency</title>
 </head>
@@ -341,7 +338,7 @@
                       <p class="transaction__money">4.25 XMR</p>
                     </div>
                     <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--pending">Ожидается</p>
+                    <p class="transaction__state transaction__state--done">Успешно</p>
                   </li>
                   <li class="transaction__item">
                     <div class="transaction__info-buy">
@@ -355,7 +352,7 @@
                       <p class="transaction__money">56.21 NEO</p>
                     </div>
                     <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--pending">Ожидается</p>
+                    <p class="transaction__state transaction__state--fail">Отказано</p>
                   </li>
                   <li class="transaction__item">
                     <div class="transaction__info-buy">
@@ -369,7 +366,7 @@
                       <p class="transaction__money">98.70 ZEC</p>
                     </div>
                     <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--pending">Ожидается</p>
+                    <p class="transaction__state transaction__state--done">Успешно</p>
                   </li>
                   <li class="transaction__item">
                     <div class="transaction__info-buy">
@@ -383,7 +380,7 @@
                       <p class="transaction__money">7240.50 RUB</p>
                     </div>
                     <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--pending">Ожидается</p>
+                    <p class="transaction__state transaction__state--done">Успешно</p>
                   </li>
                 </ul>
               </div>
