--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
 <body>
   <!-- HEADER -->
   <header class="header">
-    <ul class="nav">
-      <li class="nav__item"><a href="#" class="nav__link">Обмен</a></li>
-      <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-      <li class="nav__item"><a href="#" class="nav__link">FAQ</a></li>
-      <li class="nav__item"><a href="#" class="nav__link">Отзывы</a></li>
-      <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-    </ul>
+    <div class="hamburger-menu">
+      <input id="menu__toggle" type="checkbox" />
+      <label class="menu__btn" for="menu__toggle">
+        <span></span>
+      </label>
+      <ul class="nav">
+        <li class="nav__item"><a href="/" class="nav__link">Обмен</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">FAQ</a></li>
+        <li class="nav__item"><a href="./pages/responses.html"" class="nav__link">Отзывы</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+      </ul>
+    </div>
 
     <div class="logo">
         <img src="./images/logo.png" alt="logo" class="logo">
     </div>
 
     <div class="contacts">
-      <div class="contacts__item">
+      <div class="contacts__item contacts__item-chat">
         <img src="./images/chat.ico" alt="chat" class="contacts__img">
         <a href="#" class="contacts__link">Онлайн-чат</a>
       </div>
@@ -529,5 +535,23 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer">
+    <ul class="nav1">
+      <li class="nav1__item"><a href="#" class="nav1__link">Обмен</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">О нас</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">FAQ</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">Отзывы</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">Контакты</a></li>
+      <li class="nav1__item">
+        <img src="./images/telegram.png" alt="tg" class="contacts__img">
+        <a href="#" class="contacts__link">@crypto</a>
+      </li>
+    </ul> 
+    
+    <div class="chat">
+      <img src="./images//chat-icon.png" alt="chat" class="chat__img">
+    </div>
+  </footer>
 </body>
 </html>
