--- a/index.html
+++ b/index.html
@@ -306,90 +306,88 @@
             <!-- TRANSACTIONS -->
             <div class="transaction">
               <h2 class="transaction__title">Недавние транзакции</h2>
-              <div >
-                <ul class="transaction__line">
-                  <li class="transaction__item transaction__item--header">
-                    <div class="transaction__info-buy">
+                <table class="transaction__line">
+                  <tr class="transaction__item transaction__item--header">
+                    <td class="transaction__info-buy">
                       <p class="transaction__text">Продал</p>
-                    </div>
-                    <div class="transaction__info-sell">
+                    </td>
+                    <td class="transaction__info-sell">
                       <p class="transaction__text">Купил</p>
-                    </div>
-                    <p class="transaction__date">Дата</p>
-                    <p class="transaction__state">Состояние</p>
-                  </li>
-                  <li class="transaction__item">
-                    <div class="transaction__info-buy">
+                    </td>
+                    <td class="transaction__date">Дата</td>
+                    <td class="transaction__state">Состояние</td>
+                  </tr>
+                  <tr class="transaction__item">
+                    <td class="transaction__info-buy">
                       <img src="images/btc.ico" alt="btc" class="currency__icon">
                       <p class="transaction__text">Bitcoin</p>
                       <p class="transaction__money">0.0254 BTC</p>
-                    </div>
-                    <div class="transaction__info-sell">
+                    </td>
+                    <td class="transaction__info-sell">
                       <img src="images/eth.png" alt="eth" class="currency__icon">
                       <p class="transaction__text">Ethereum</p>
                       <p class="transaction__money">0.1024 ETH</p>
-                    </div>
-                    <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--pending">Ожидается</p>
-                  </li>
-                  <li class="transaction__item">
-                    <div class="transaction__info-buy">
+                    </td>
+                    <td class="transaction__date">07 Jul. 2022</td>
+                    <td class="transaction__state transaction__state--pending">Ожидается</td>
+                  </tr>
+                  <tr class="transaction__item">
+                    <td class="transaction__info-buy">
                       <img src="images/xrp.png" alt="xrp" class="currency__icon">
                       <p class="transaction__text">Ripple</p>
                       <p class="transaction__money">2.56 XRP</p>
-                    </div>
-                    <div class="transaction__info-sell">
+                    </td>
+                    <td class="transaction__info-sell">
                       <img src="images/xmr.svg" alt="xmr" class="currency__icon">
                       <p class="transaction__text">Monero</p>
                       <p class="transaction__money">4.25 XMR</p>
-                    </div>
-                    <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--done">Успешно</p>
-                  </li>
-                  <li class="transaction__item">
-                    <div class="transaction__info-buy">
+                    </td>
+                    <td class="transaction__date">07 Jul. 2022</td>
+                    <td class="transaction__state transaction__state--done">Успешно</td>
+                  </tr>
+                  <tr class="transaction__item">
+                    <td class="transaction__info-buy">
                       <img src="images/money.png" alt="money" class="currency__icon">
                       <p class="transaction__text">Наличные</p>
                       <p class="transaction__money">12300 RUB</p>
-                    </div>
-                    <div class="transaction__info-sell">
+                    </td>
+                    <td class="transaction__info-sell">
                       <img src="images/neo.png" alt="neo" class="currency__icon">
                       <p class="transaction__text">NEO</p>
                       <p class="transaction__money">56.21 NEO</p>
-                    </div>
-                    <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--fail">Отказано</p>
-                  </li>
-                  <li class="transaction__item">
-                    <div class="transaction__info-buy">
+                    </td>
+                    <td class="transaction__date">07 Jul. 2022</td>
+                    <td class="transaction__state transaction__state--fail">Отказано</td>
+                  </tr>
+                  <tr class="transaction__item">
+                    <td class="transaction__info-buy">
                       <img src="images/money.png" alt="money" class="currency__icon">
                       <p class="transaction__text">Наличные</p>
                       <p class="transaction__money">312 USD</p>
-                    </div>
-                    <div class="transaction__info-sell">
+                    </td>
+                    <td class="transaction__info-sell">
                       <img src="images/zec.jpeg" alt="zec" class="currency__icon">
                       <p class="transaction__text">Zcash</p>
                       <p class="transaction__money">98.70 ZEC</p>
-                    </div>
-                    <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--done">Успешно</p>
-                  </li>
-                  <li class="transaction__item">
-                    <div class="transaction__info-buy">
+                    </td>
+                    <td class="transaction__date">07 Jul. 2022</td>
+                    <td class="transaction__state transaction__state--done">Успешно</td>
+                  </tr>
+                  <tr class="transaction__item">
+                    <td class="transaction__info-buy">
                       <img src="images/xlm.png" alt="xlm" class="currency__icon">
                       <p class="transaction__text">Stellarlumens</p>
                       <p class="transaction__money">78.56 XLM</p>
-                    </div>
-                    <div class="transaction__info-sell">
+                    </td>
+                    <td class="transaction__info-sell">
                       <img src="images/qiwi.png" alt="qiwi" class="currency__icon">
                       <p class="transaction__text">QIWI</p>
                       <p class="transaction__money">7240.50 RUB</p>
-                    </div>
-                    <p class="transaction__date">07 Jul. 2022</p>
-                    <p class="transaction__state transaction__state--done">Успешно</p>
-                  </li>
-                </ul>
-              </div>
+                    </td>
+                    <td class="transaction__date">07 Jul. 2022</td>
+                    <td class="transaction__state transaction__state--done">Успешно</td>
+                  </tr>
+                </table>
             </div>
     </div>
 
