footer responce fix

--- a/pages/responses.html
+++ b/pages/responses.html
@@ -84,14 +84,18 @@
 
 <footer class="footer">
   <ul class="nav1">
-    <li class="nav1__item"><a href="#" class="nav1__link">Обмен</a></li>
-    <li class="nav1__item"><a href="#" class="nav1__link">О нас</a></li>
-    <li class="nav1__item"><a href="#" class="nav1__link">FAQ</a></li>
-    <li class="nav1__item"><a href="#" class="nav1__link">Отзывы</a></li>
-    <li class="nav1__item"><a href="#" class="nav1__link">Контакты</a></li>
+    <div class="footer__container">
+      <li class="nav1__item"><a href="#" class="nav1__link">Обмен</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">О нас</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">FAQ</a></li>
+    </div>
+    <div class="footer__container">
+      <li class="nav1__item"><a href="#" class="nav1__link">Отзывы</a></li>
+      <li class="nav1__item"><a href="#" class="nav1__link">Контакты</a></li>
+    </div>
     <li class="nav1__item">
       <img src="../images/telegram.png" alt="tg" class="contacts__img">
-      <a href="#" class="contacts__link">@crypto</a>
+      <a href="#" class="contacts__link nav1__link">@crypto</a>
     </li>
   </ul> 
   
